packages/dv-pipecat-ai/dv_pipecat_ai-0.0.82.dev39.tar.gz/dv_pipecat_ai-0.0.82.dev39/k8s/istio/destination-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dv-pipecat
  namespace: default
spec:
  host: dv-pipecat.default.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dv-pipecat
  namespace: default
spec:
  hosts:
  - dv-pipecat.default.svc.cluster.local
  gateways:
  - mesh
  http:
  - route:
    - destination:
        host: dv-pipecat.default.svc.cluster.local
        subset: stable
      weight: 90
    - destination:
        host: dv-pipecat.default.svc.cluster.local
        subset: canary
      weight: 10
